# rust-outlaw-format

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: create-release.yml  run-tests.yml
benches/: benchmarks.rs  long_document.input
src/: consts.rs  formatting.rs  lib.rs  main.rs  parsing.rs
tests/: 1.expected  1.input  bullet_points.expected  bullet_points.input  fenced_filetypes.expected  fenced_filetypes.input  full_document.expected  long_lines.expected  long_lines.input  simple.expected  simple.input  todo_items.expected  todo_items.input
