[package]
name = "outlaw-format"
version = "2.0.0"
authors = ["Terr <git@terr.nl>"]
edition = "2021"
rust-version = "1.66"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = { version = "0.4", default-features = false }

[profile.release]
lto = true

[[bench]]
name = "benchmarks"
harness = false
